{
    "name": "DungeonMaster",
    "maps": [
        {
            "name": "Controls",
            "id": "eb7f45de-ee3b-4191-ae67-82356ea43618",
            "actions": [
                {
                    "name": "Mouse",
                    "type": "PassThrough",
                    "id": "031bc89a-4447-4bd6-8358-6d051e492cc8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "3360c3e9-c57e-4135-9634-386c5876f00b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateCW",
                    "type": "Button",
                    "id": "ab5d66ea-0f0a-4fa1-911f-913d86a92f66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateACW",
                    "type": "Button",
                    "id": "992a5758-4b99-4fc8-bfea-d039da944de8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Motion",
                    "type": "Value",
                    "id": "e3b46d09-f6e1-439d-add6-694817f2e2fc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateCamCW",
                    "type": "Button",
                    "id": "4953df66-372a-4ff7-a523-79a31c99add3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateCamACW",
                    "type": "Button",
                    "id": "73490d8e-b4b2-44e3-9fab-a8d41a716965",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scrolling",
                    "type": "PassThrough",
                    "id": "e3511339-424c-47b1-90de-fc247aaf6631",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0fe5d1c2-2a68-4b83-8919-dbef3c5fceb9",
                    "path": "<VirtualMouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e551e2a-c581-44f2-8c11-a90b331c7561",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07fbfb64-a6f6-4cae-a31b-247f784cda01",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCW",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "355f05be-f6dd-4360-95c3-a1e376e4979a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateACW",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "2538ef51-67cc-4eb7-9654-6012c85404c6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Motion",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "24131070-5887-42f2-af1d-0687ed4d4d2c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Motion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "02b278cb-958c-4e81-b199-4c51a2e39bea",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Motion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "24010b6d-a690-4fc5-88db-e1751ed1a022",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Motion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e6948784-a9c3-4693-b353-4a3fa0a41612",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Motion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6b8d45e9-e0f2-41b5-8bf6-18901a91e7f4",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCamCW",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d4c0f15-f9d7-4a83-b924-563c9c2b0b5d",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCamACW",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ba1d60d-7c5c-46ee-9b7c-045cca40b7bf",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scrolling",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}